# openvino-windows-llm

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  OPENWEBUI.md  QUICKSTART.md  README.md  model_library_manifest.json  models.json  pyproject.toml  repair-validation-report.md  requirements-convert.txt  requirements-dev.txt  requirements.txt  ruff-doctor-report.txt  setup.bat  setup.sh  start_server.bat  start_server.sh
.github/: FUNDING.yml  final-edge-fixes.patch  hardening-patch-00  hardening-patch-01  hardening-patch-02  hardening-patch-03  hardening-patch-04
app/: __init__.py  body_limit.py  build_info.py  chat_context_ui.py  chat_format.py  chat_guard_ui.py  chat_queue_ui.py  config.py  data_migrations.py  desktop_controller.py  desktop_launcher.py  desktop_model_paths.py  desktop_onboarding.py  desktop_operations.py  desktop_operations_models.py  desktop_operations_routes.py  desktop_operations_ui.py  desktop_server.py  desktop_shell.py  desktop_shutdown_safety.py  diagnostics.py  diagnostics_privacy.py  diagnostics_sections.py  distribution.py  doctor_ui.py  errors.py  file_locks.py  first_run_npu_ui.py  header_overflow_ui.py  lifecycle_safety.py  local_request_security.py  model_library.py  model_library_conversion.py  model_library_routes.py  model_library_schema.py  model_library_service.py  model_library_ui.py  model_load_target.py  model_manager.py  model_manager_core.py  (+34 more)
docs/: API_CONTRACT.md  CODE_SIGNING.md  COMPATIBILITY_MATRIX.md  DATA_PATHS.md  DESKTOP_API.md  DESKTOP_ARCHITECTURE.md  DEVICE_SUPPORT.md  DIAGNOSTICS.md  FEDORA.md  FIRST_RUN.md  HARDWARE_ADVISOR.md  INSTALLER.md  INTEGRATIONS.md  KNOWN_ISSUES.md  LINUX.md  MODEL_LIBRARY.md  OPENVINO_0_6_QUALIFICATION.md  PACKAGING_RELEASE.md  PORTABLE.md  RELEASE_PROCESS.md  THIRD_PARTY_LICENSES.md  TRAY.md  TROUBLESHOOTING_DESKTOP.md  UBUNTU.md  UPDATE_POLICY.md  UPGRADE_ROLLBACK.md  VERSIONING.md  VISION.md  WINDOWS.md  WINDOWS_CERTIFICATION.md
packaging/: installer.iss  openvino_windows_llm.spec  runtime_hook.py  version_info.txt
requirements/: release.txt
runtime/: __init__.py  benchmark_runner.py  benchmark_runner_core.py  device_check.py  model_converter.py  npu_compat.py  openvino_engine.py
scripts/: apply_recent_feature_fixes.py  apply_ui_ux_pass.py  benchmark_devices.py  build_release.ps1  build_windows_distribution.ps1  certify_context_depth.py  certify_conversion_lifecycle.py  publish_release.ps1  release_manifest.py  release_scan.py  release_tools.py  smoke_test_packaged.ps1  test_openwebui_compat.ps1  validate_api_contract.py  validate_mock_contract.ps1  validate_model_library_manifest.py  (+3 more)
(+213 files in other folders)
