[project]
name = "openvino-windows-llm"
version = "0.1.0"
description = "Windows-first local LLM server built on OpenVINO GenAI for Intel CPU/GPU/NPU."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openvino-genai>=2025.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
convert = [
    "optimum-intel[openvino]>=1.21.0",
    "nncf>=2.14.0",
    "huggingface_hub>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
ov-llm = "app.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled pragmatically

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.tmp/pytest"
tmp_path_retention_policy = "none"
filterwarnings = ["ignore::DeprecationWarning"]
