[project]
name = "openvino-windows-llm"
dynamic = ["version"]
description = "Windows-first local LLM and VLM server built on OpenVINO GenAI for Intel CPU/GPU/NPU."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openvino-genai>=2025.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "pystray>=0.19.5",
]

[project.optional-dependencies]
convert = [
    "optimum-intel[openvino]>=1.21.0",
    "nncf>=2.14.0",
    "huggingface_hub>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
distribution = [
    "pyinstaller>=6.10.0",
    "pip-licenses>=5.0.0",
]

[project.scripts]
ov-llm = "app.server:main"
ov-llm-desktop = "app.desktop_launcher:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "app.version.__version__" }

[tool.setuptools.packages.find]
include = ["app*", "runtime*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.tmp/pytest"
tmp_path_retention_policy = "none"
filterwarnings = ["ignore::DeprecationWarning"]
